# purchase-orders-api

./: .dockerignore  .env  .env.development  .env.example  .env.testing  .gitignore  Dockerfile  Makefile  README.md  app.py  db.py  decorator.py  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
.github/workflows/: ci.yml
exceptions/: exceptions.py
migrations/versions/: 0a674651c22b_adicionando_coluna_quantidade_na_tabela_.py  5c643704f429_coluna_quantity_not_null.py  7b134dfa54cd_users_table.py  f606aa9493f1_adicionando_coluna_quantidade_no_.py
purchase_orders/: model.py  resources.py  services.py
purchase_orders_items/: model.py  resources.py  services.py
requeriments/: development.txt  production.txt
requirements/: development.txt  production.txt
scripts/: seed.py
tests/: conftest.py
tests/purchase_orders/: conftest.py  test_resources.py  test_services.py
tests/purchase_orders_items/: conftest.py  test_resources.py  test_services.py
users/: exceptions.py  model.py  resources.py  services.py
