[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "purchase-orders-api"
version = "1.0.0"
description = "REST API for managing purchase orders with JWT authentication"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
markers = [
    "nocleardb: marks tests that should not clear the database before running",
]
